<resources>
    <string name="app_name">DaSong</string>
    <string name="commentary">Commentaire</string>
    <string name="back_icon">back icon</string>
    <string name="rechercher">Rechercher</string>
    <string name="play_pause_icon">play/pause icon</string>
    <string name="cover">cover</string>
    <string name="titre">Titre</string>
    <string name="artiste">Artiste</string>
    <string name="valider">Valider</string>
    <string name="votre_liste_est_vide">Votre liste est vide</string>
    <string name="recherche">Recherche...</string>
    <string name="log_out">Log out</string>
    <string name="app_icons">App icons</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="mail">Mail</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="log_in2">Log In</string>
    <string name="no_connection_icon">no connection icon</string>
    <string name="oups">Oups !</string>
    <string name="v_rifier_votre_connexion_internet_et_r_essayez">Vérifier votre connexion internet et réessayez !</string>
    <string name="r_essayer">Réessayer</string>
    <string name="edit_icon">Edit icon</string>
    <string name="logout_icon">logout icon</string>
    <string name="music_list_icon">music list icon</string>
    <string name="add_friends">add friends</string>
    <string name="find_friends">Find friends</string>
    <string name="settings_icon">settings icon</string>
    <string name="changer_de_pseudo">Changer de pseudo :</string>
    <string name="nouveau_pseudo">Nouveau pseudo</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe :</string>
    <string name="ancien_mot_de_passe2">Ancien mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe :</string>
    <string name="nouveau_mot_de_passe2">Nouveau mot de passe</string>
    <string name="nouvel_email">Nouvel email :</string>
    <string name="nouvel_email2">Nouvel email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer">Confirmer</string>
    <string name="mot_de_passe2">Mot de passe :</string>
    <string name="app_icon">App icons</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="pas_amis">Il semble que vous n\'ayez pas encore d\'ami.</string>
    <string name="add">Voulez-vous en ajouter ?</string>
    <string name="ajouter">Ajouter des amis</string>
    <string name="suppression_icon">suppression icon</string>
    <string name="username">Username</string>
    <string name="accepter_requete_icon">accepter requete icon</string>
    <string name="rejeter_requete_icon">rejeter requete icon</string>
    <string name="add_friend_icon">add friend icon</string>
    <string name="decline_friend_icon">decline friend icon</string>
    <string name="play">play</string>
    <string name="comment_icon">comment icon</string>
    <string name="add_icon">add icon</string>
    <string name="like_icon">like icon</string>
    <string name="create_a_post_icon">Create a post icon</string>
</resources>