<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A3A47"
    android:padding="32dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintBottom_toTopOf="@+id/pseudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/profilePic"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic"
        app:layout_constraintVertical_bias="0.843"
        android:contentDescription="@string/edit_icon" />

    <TextView
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/fui_transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/pseudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/back_icon" />

    <ImageButton
        android:id="@+id/signOut"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/fui_transparent"
        android:src="@drawable/ic_login"
        app:layout_constraintBottom_toTopOf="@+id/pseudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/logout_icon" />

    <ImageButton
        android:id="@+id/goToFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fui_transparent"
        android:src="@drawable/ic_song_list"
        app:layout_constraintBottom_toTopOf="@+id/friendsInvite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/findFriends"
        app:layout_constraintTop_toBottomOf="@+id/pseudo"
        android:contentDescription="@string/music_list_icon" />

    <ImageButton
        android:id="@+id/findFriends"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@color/fui_transparent"
        android:src="@drawable/ic_friend_add"
        android:text="@string/find_friends"
        app:layout_constraintBottom_toTopOf="@+id/friendsInvite"
        app:layout_constraintEnd_toStartOf="@+id/goToFav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pseudo"
        android:contentDescription="@string/add_friends" />

    <ImageButton
        android:id="@+id/managingProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@+id/profilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/signOut"
        android:contentDescription="@string/settings_icon" />

    <ListView
        android:id="@+id/friendsInvite"
        android:background="@drawable/song_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/friends_item" />


</androidx.constraintlayout.widget.ConstraintLayout>