<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_transparent">
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrap_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/usernameSeeked"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernameSeeked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/declineFriend"
                app:layout_constraintStart_toEndOf="@+id/profilePic"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/addFriend"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@color/fui_transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/declineFriend"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/add_friend_icon" />

            <ImageButton
                android:id="@+id/declineFriend"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@color/fui_transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addFriend"
                app:layout_constraintStart_toEndOf="@+id/usernameSeeked"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/decline_friend_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>