<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrap_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/usernameRequest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernameRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxWidth="152dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/noToRequest"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/yesToRequest"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/accepter_requete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noToRequest"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/noToRequest"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/rejeter_requete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yesToRequest"
            app:layout_constraintStart_toEndOf="@+id/usernameRequest"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>